// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP RadioInput__StyledFormField-sc-1brmdkl-0 inzPoe"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eCHmSz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jxCfeQ"
          disabled=""
        >
          <div
            class="StyledBox-sc-13pk1d4-0 beTYPw StyledRadioButton-sc-g1f6ld-5 fjvsCI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 EXLfb"
              disabled=""
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hYYBiG StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 nYWlb"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fHINMz"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP RadioInput__StyledFormField-sc-1brmdkl-0 inzPoe"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eCHmSz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kByHnp"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 beTYPw StyledRadioButton-sc-g1f6ld-5 fjvsCI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hYYBiG StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 nYWlb"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fHINMz"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP RadioInput__StyledFormField-sc-1brmdkl-0 inzPoe"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 cxWGoc"
        for="some-input"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 eCHmSz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kByHnp"
          for="some-input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 beTYPw StyledRadioButton-sc-g1f6ld-5 fjvsCI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
              id="some-input"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hYYBiG StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 nYWlb"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fHINMz"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP RadioInput__StyledFormField-sc-1brmdkl-0 inzPoe"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 ccrOLA"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 eCHmSz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kByHnp"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 beTYPw StyledRadioButton-sc-g1f6ld-5 fjvsCI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hYYBiG StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 nYWlb"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fHINMz"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP RadioInput__StyledFormField-sc-1brmdkl-0 inzPoe"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eCHmSz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kByHnp"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 beTYPw StyledRadioButton-sc-g1f6ld-5 fjvsCI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hYYBiG StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 nYWlb"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fHINMz"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 glekGW"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP RadioInput__StyledFormField-sc-1brmdkl-0 inzPoe"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 eCHmSz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kByHnp"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 beTYPw StyledRadioButton-sc-g1f6ld-5 fjvsCI"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fHUYwn"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hYYBiG StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 nYWlb"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 fHINMz"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 jNjjQj"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
